<resources>
    <string name="app_name">Reciipiie</string>
    <string name="welcome_to">Welcome to</string>
    <string name="reciipiie">Reciipiie</string>
    <string name="please_signin_to_continue">Please sign in to continue</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="discover_tasty_and_healthy_recipes">Discover tasty and healthy recipes</string>
    <string name="hey_user">👋Hey %1$s</string>
    <string name="search_any_recipe">Search any recipe</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="all_recipes">All Recipes</string>
    <string name="favourite_recipes">Favourite Recipes</string>
    <string name="recipe_image">Recipe image</string>
    <string name="jalebi_fafda">Jalebi Fafda</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="equipments">Equipments</string>
    <string name="quick_summary">Quick Summary</string>
</resources>